Parameterize database connection credentials

--- a/backend/VotingApp.Api/appsettings.json
+++ b/backend/VotingApp.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=VotingAppDb;User Id=sa;Password=Passw0rd;Trusted_Connection=True;TrustServerCertificate=True;"
+        "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=VotingAppDb;User Id={id};Password={password};Trusted_Connection=True;TrustServerCertificate=True;"
     },
     "Logging": {
         "LogLevel": {
